delete request body for notification
